# Kentos

./: .gitignore  Cargo.toml  LICENSE  README.md  versions.md
docs/: reference.md
src/: kentos_alloc.rs  kentos_gdt.rs  kentos_interrupts.rs  kentos_memory.rs  kentos_stdio.rs  kentos_utils.rs  main.rs
