[package]
name = "kentos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = {version = "0.9", features = ["map_physical_memory"]}
linked_list_allocator = "0.10.5"
pic8259 = "0.10.1"
spin = "0.10.0"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins", "alloc"]

[build]
target = "x86_64-thekentorico-kentos.json"
[target.x86_64-thekentorico-kentos]
linker = "rust-lld"
